--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,9 +33,9 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
-      <widget class="QWidget" name="tab">
+      <widget class="QWidget" name="_tableView">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -49,7 +49,7 @@
         <string>Table View</string>
        </attribute>
       </widget>
-      <widget class="QWidget" name="tab_2">
+      <widget class="QWidget" name="_pixelView">
        <attribute name="title">
         <string>Pixel View</string>
        </attribute>
@@ -88,46 +88,79 @@
       <property name="lineWidth">
        <number>10</number>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>0</number>
-       </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
-       <property name="bottomMargin">
-        <number>0</number>
-       </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <property name="spacing">
-          <number>0</number>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeConstraint">
-          <enum>QLayout::SetNoConstraint</enum>
+         <property name="sizeType">
+          <enum>QSizePolicy::Fixed</enum>
          </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>22</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QTreeWidget" name="_treeFilter">
+         <column>
+          <property name="text">
+           <string>Filters</string>
+          </property>
+         </column>
          <item>
-          <widget class="QTabWidget" name="tabWidget_2">
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>16777215</height>
-            </size>
+          <property name="text">
+           <string>Colorize</string>
+          </property>
+          <item>
+           <property name="text">
+            <string>Colorize Cell</string>
            </property>
-           <property name="currentIndex">
-            <number>0</number>
+          </item>
+          <item>
+           <property name="text">
+            <string>Colorize Column</string>
            </property>
-           <widget class="QWidget" name="tab_3">
-            <attribute name="title">
-             <string>Tools</string>
-            </attribute>
-           </widget>
-          </widget>
+          </item>
          </item>
-        </layout>
+         <item>
+          <property name="text">
+           <string>Other tools</string>
+          </property>
+          <item>
+           <property name="text">
+            <string>test</string>
+           </property>
+          </item>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="_activeFilter">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>400</height>
+          </size>
+         </property>
+         <property name="title">
+          <string>&lt;Filter Name&gt;</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="_filterApplyBtn">
+         <property name="text">
+          <string>Apply Filter</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -156,9 +189,9 @@
     <property name="toolTipsVisible">
      <bool>false</bool>
     </property>
-    <addaction name="actionOpen_FIle"/>
+    <addaction name="_actionOpenFile"/>
     <addaction name="separator"/>
-    <addaction name="actionSave_As_2"/>
+    <addaction name="_actionSaveAs"/>
    </widget>
    <addaction name="menuFIle"/>
   </widget>
@@ -172,12 +205,12 @@
     <string>Save As...</string>
    </property>
   </action>
-  <action name="actionOpen_FIle">
+  <action name="_actionOpenFile">
    <property name="text">
     <string>Open FIle</string>
    </property>
   </action>
-  <action name="actionSave_As_2">
+  <action name="_actionSaveAs">
    <property name="text">
     <string>Save As...</string>
    </property>
