--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,7 +41,7 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <widget class="QTabWidget" name="tabWidget">
+      <widget class="QTabWidget" name="_tabWidget">
        <property name="enabled">
         <bool>false</bool>
        </property>
@@ -86,14 +86,17 @@
         </layout>
        </widget>
        <widget class="QWidget" name="_pixelTab">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <attribute name="title">
          <string>Pixel Represenation</string>
         </attribute>
        </widget>
       </widget>
-      <widget class="QFrame" name="frame">
+      <widget class="QWidget" name="_toolsWidget" native="true">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -115,15 +118,6 @@
        </property>
        <property name="autoFillBackground">
         <bool>true</bool>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Plain</enum>
-       </property>
-       <property name="lineWidth">
-        <number>10</number>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
@@ -196,6 +190,20 @@
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
           </property>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+          </layout>
          </widget>
         </item>
         <item>
@@ -270,22 +278,5 @@
   </action>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>_applyFilterBtn</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>update()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>1113</x>
-     <y>702</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>1113</x>
-     <y>747</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
