started to work on connection between filter and interface

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -82,6 +82,9 @@
          </property>
          <item row="0" column="0">
           <widget class="QTableView" name="_tableView">
+           <property name="layoutDirection">
+            <enum>Qt::LeftToRight</enum>
+           </property>
            <property name="frameShape">
             <enum>QFrame::NoFrame</enum>
            </property>
@@ -227,6 +230,9 @@
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
+           <property name="spacing">
+            <number>0</number>
+           </property>
            <property name="leftMargin">
             <number>0</number>
            </property>
