renamed export and pxiel represenation tab

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -118,7 +118,7 @@
          <bool>false</bool>
         </property>
         <attribute name="title">
-         <string>Pixel Represenation</string>
+         <string>Image Represenation</string>
         </attribute>
        </widget>
       </widget>
