--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -223,6 +223,12 @@
             <height>400</height>
            </size>
           </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>500</height>
+           </size>
+          </property>
           <property name="title">
            <string/>
           </property>
