--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -155,16 +155,8 @@
           <number>0</number>
          </property>
          <item row="0" column="0">
-          <widget class="QFrame" name="_imageView">
-           <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Plain</enum>
-           </property>
-           <property name="lineWidth">
-            <number>0</number>
-           </property>
+          <widget class="QStackedWidget" name="_imageView">
+           <widget class="QWidget" name="_imageViewPage1" native="true"/>
           </widget>
          </item>
         </layout>
@@ -330,7 +322,7 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>29</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="defaultUp">
