--- a/modulocolordialog.ui
+++ b/modulocolordialog.ui
@@ -298,6 +298,9 @@
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
+            <property name="minimum">
+             <number>1</number>
+            </property>
            </widget>
           </item>
           <item>
