removed sort + added select all feature

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -131,44 +131,6 @@
          </item>
         </layout>
        </widget>
-       <widget class="QWidget" name="_pixelTab">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <attribute name="title">
-         <string>Image Representation</string>
-        </attribute>
-        <layout class="QGridLayout" name="gridLayout_2">
-         <property name="leftMargin">
-          <number>0</number>
-         </property>
-         <property name="topMargin">
-          <number>0</number>
-         </property>
-         <property name="rightMargin">
-          <number>0</number>
-         </property>
-         <property name="bottomMargin">
-          <number>0</number>
-         </property>
-         <property name="spacing">
-          <number>0</number>
-         </property>
-         <item row="0" column="0">
-          <widget class="QFrame" name="_imageView">
-           <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Plain</enum>
-           </property>
-           <property name="lineWidth">
-            <number>0</number>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
       </widget>
       <widget class="QWidget" name="_toolsWidget" native="true">
        <property name="enabled">
@@ -263,6 +225,11 @@
              <string>Modulo</string>
             </property>
            </item>
+           <item>
+            <property name="text">
+             <string>Sort</string>
+            </property>
+           </item>
           </item>
          </widget>
         </item>
@@ -309,14 +276,34 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="_applyFilterBtn">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>Apply Filter</string>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QPushButton" name="_applyFilterBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>120</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Apply Filter</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="_checkAll">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>All</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
