--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,10 +45,28 @@
        <property name="enabled">
         <bool>false</bool>
        </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
          <height>16777215</height>
+        </size>
+       </property>
+       <property name="baseSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
         </size>
        </property>
        <property name="currentIndex">
@@ -113,14 +131,6 @@
          </item>
         </layout>
        </widget>
-       <widget class="QWidget" name="_pixelTab">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <attribute name="title">
-         <string>Pixel Represenation</string>
-        </attribute>
-       </widget>
       </widget>
       <widget class="QWidget" name="_toolsWidget" native="true">
        <property name="enabled">
@@ -142,6 +152,12 @@
         <size>
          <width>200</width>
          <height>16777215</height>
+        </size>
+       </property>
+       <property name="baseSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
         </size>
        </property>
        <property name="autoFillBackground">
@@ -183,12 +199,12 @@
            </property>
            <item>
             <property name="text">
-             <string>Gradient Color</string>
+             <string>Gradient</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Fixed Color</string>
+             <string>Fixed</string>
             </property>
            </item>
           </item>
@@ -201,12 +217,17 @@
            </property>
            <item>
             <property name="text">
-             <string>Conditional Value</string>
+             <string>Conditionnal</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Modulo</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Sort</string>
             </property>
            </item>
           </item>
@@ -221,6 +242,12 @@
            <size>
             <width>0</width>
             <height>400</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>500</height>
            </size>
           </property>
           <property name="title">
@@ -249,14 +276,34 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="_applyFilterBtn">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>Apply Filter</string>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QPushButton" name="_applyFilterBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>120</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Apply Filter</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="_checkAll">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>All</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
