refractored generation window and updates

--- a/modulocolordialog.ui
+++ b/modulocolordialog.ui
@@ -295,6 +295,9 @@
               <height>16777215</height>
              </size>
             </property>
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
