--- a/conditionalcolordialog.ui
+++ b/conditionalcolordialog.ui
@@ -108,6 +108,9 @@
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
+            <property name="decimals">
+             <number>4</number>
+            </property>
            </widget>
           </item>
           <item>
@@ -134,7 +137,7 @@
            <bool>true</bool>
           </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="tab">
            <attribute name="title">
